--- a/src/Behavior/wwwroot/css/site.css
+++ b/src/Behavior/wwwroot/css/site.css
@@ -63,3 +63,16 @@ body { padding-top: 70px; }
 .counterLbl-lg {
     font-size:xx-large;
 }
+
+pre {
+    padding: 20px;
+    font-size: 20px;
+    border-radius: 15px;
+    background-color: #fafafa;
+    border: 1px solid #999;
+    font-family:'Courier New', 'Courier', monospaced;
+}
+
+.hidden {
+    display: none;
+}
