--- a/src/Behavior/Views/Home/Index.cshtml
+++ b/src/Behavior/Views/Home/Index.cshtml
@@ -5,24 +5,48 @@
 <div class="row">
     <div class="col-sm-12">
         <div class="list-group" id="studentsList">
-            <button type="button" class="list-group-item disabled">Students</button>
+            <button type="button" class="list-group-item disabled" data-toggle="modal" data-target="#myModal">Students</button>
+        </div>
+    </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+            </div>
+            <div class="modal-body">
+                ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
         </div>
     </div>
 </div>
 
 @section Scripts {
     <script>
-        var fireBaseRef = behavior.firebase;
-        fireBaseRef.init(function (initComplete) {
+        behavior.firebase.init(function (initComplete) {
             if (initComplete) {
-                fireBaseRef.getListOfStudents(function (students) {
+                behavior.firebase.getListOfStudents(function (students) {
                     for (var key in students) {
                         var student = students[key];
                         var listButton = $('<a/>',
                         {
-                            href: "/Home/Counter/" + key,
+                            //href: "/Home/Counter/" + key,
                             text: student.lastName + ', ' + student.firstName
-                        }).addClass('list-group-item');
+                        }).addClass('list-group-item')
+                            .attr("data-toggle", "modal")
+                            .attr("data-target", "#myModal")
+                            .attr("data-studentkey", key)
+                            .attr("data-studentname", student.lastName + ', ' + student.firstName);
                         
                         $('#studentsList').append(listButton);
 
@@ -30,5 +54,22 @@
                 });
             }
         });
+
+        $('#myModal').on('show.bs.modal', function (event) {
+            var button = $(event.relatedTarget) // Button that triggered the modal
+            var studentKey = button.data('studentkey');
+            var studentName = button.data('studentname');
+            var modal = $(this);
+            modal.find('.modal-title').text(studentName);
+            var listButton = $('<a/>',
+                        {
+                            href: "/Home/Counter/" + studentKey,
+                            text: "Start Count Session"
+                        });
+            
+            $('#studentsList').append(listButton);
+            modal.find('.modal-body').empty();
+            modal.find('.modal-body').append(listButton);
+        })
     </script>
 }
